# sdlpal

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  AUTHORS.txt  CREDITS.txt  Info.plist  LICENSE  Makefile  Makefile.3ds  Makefile.cygwin  Makefile.dingux  Makefile.gph  Makefile.psp  Makefile.sdl2  README.md  README.txt  SDLMain.m  SDL_stbimage.h  adplug  ascii.h  audio.c  audio.h  aviplay.c  aviplay.h  battle.c  battle.h  big5font.h  bintray.json  codepage.h  common.h  compile_flags.txt  defines.h  ending.c  ending.h  fight.c  fight.h  font.c  font.h  fontglyph_cn.h  (+95 more)
.github/: PULL_REQUEST_TEMPLATE.md
3ds/: Makefile  pal_config.h  pal_utils.c  sdlpal.rsf
English.lproj/: InfoPlist.strings
Pal.xcodeproj/: project.pbxproj
SDL2/: README.md  README.txt
adplug/: binio.cpp  binio.h  convertopl.h  dbemuopl.cpp  dbemuopl.h  dbopl.cpp  dbopl.h  demuopl.cpp  demuopl.h  dosbox_opl.cpp  dosbox_opl.h  dosbox_opls.cpp  dosbox_opls.h  emuopl.cpp  emuopl.h  emuopls.cpp  emuopls.h  fmopl.c  fmopl.h  fprovide.cpp  fprovide.h  mame_opls.cpp  mame_opls.h  nuked_opl.c  nuked_opl.h  nukedopl.cpp  nukedopl.h  opl.h  opltypes.h  player.cpp  player.h  realopl.cpp  realopl.h  rix.cpp  rix.h  surroundopl.cpp  surroundopl.h
android/: .project  AndroidManifest.xml  build.gradle  build.xml  gradle.properties  project.properties
dingux/: Makefile  Makefile.dingux  pal_config.h  pal_utils.c
docs/: AUTHORS  AUTHORS.md  README.md  sdlpal.cfg.example
dos/: Makefile  crash_analysis.sh  crash_handler_dos.h  dos.c  pal_config.h  pal_utils.c
emscripten/: Makefile  Makefile.wasm  em.c  emscripten_adapter.cpp  jszip.min.js  main.js  mouse.patch  pal_config.h  process.sh  requirements.txt  sdlpal.html
gph/: Makefile  pal_config.h  pal_utils.c
incomplete_ports/: README.txt  pal_config.h  pal_utils.c
ios/: pal_config.h
libmad/: frame.c  huffman.c  layer12.c  layer3.c  libmad_config.h  mad.h  music_mad.c  music_mad.h  synth.c  timer.c
libretro/: CMakeLists.txt  libretro.c  pal_config.h  sdlpal_libretro.info
libretro/sdl-libretro/: SDL_config.h  SDL_libretro.h  audio.c  events.c  video.c
macos/: Info.plist  SDLMain_SDL12.m  native_midi_macosx.c  pal_config.h  sdlpal.icns  util.mm
native_midi/: native_midi.h  native_midi_android.c  native_midi_common.c  native_midi_common.h  native_midi_macosx.c  native_midi_win32.c
osx/: pal_config.h
overlay/: COPYING  overlay.xcf
psp/: Makefile  Makefile.psp  main_PSP.c  pal_config.h
scripts/: bumpversion.sh  gencert  gencert.bat  gengitrev  (+5 more)
(+391 files in other folders)
